ok, it works enough

--- a/water_cube.ini
+++ b/water_cube.ini
@@ -5,11 +5,11 @@ Antialias_Threshold=0.1
 Antialias_Depth=2
 
 Input_File_Name="water_cube.pov"
-
+Output_File_Name="output/"
 Initial_Frame=1
-Final_Frame=30
+Final_Frame=2500
 Initial_Clock=0
-Final_Clock=.75
+Final_Clock=100
 
 Cyclic_Animation=on
 Pause_when_Done=off
